--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,33 @@
 <div class="wrapper">
   <h1>Hello, I'm Dave</h1>
   <p class="intro">I'm an interaction designer. I design and build digital products based on people's needs and behaviours.</p>
-  <p>Right now, I'm working as an interaction designer at <a class="link" href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs">Defra</a>.</p>
-  <p>I worked for 3 years at NHS Digital as design lead for the <a class="link" href="#">NHS digital service manual</a> and spent 3 years at Leeds City Council as the design lead for <a class="link" href="#">LEEDS.GOV.UK</a>.</p>
-  <p>I'm passionate about creating simple, beautiful services that improve people's lives.</p>
 
-  <h2>Latest work</h2>
-  <p>My latest work..</p>
+  <h2>Work</h2>
+  <ul class="card">
+    <li class="card">  
+      <img class="card__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
+      <h3 class="card__title">
+        <a href="#">NHS digital service manual</a>
+      </h3>
+      <p>Ten common pitfalls to avoid when designing card components.</p>
+    </li>
+    <li class="card">  
+      <img class="card__img" src="/images/work/portfolio_lcc.png" alt="">
+      <h3 class="card__title">
+        <a href="#">Leeds City Council</a>
+      </h3>
+      <p>Ten common pitfalls to avoid when designing card components.</p>
+    </li> 
+  </ul>
 
-  <h2>Contact me</h2>
+  <p><a class="link" href="/work">See all work</a></p>
+
+
+  <h2>Contact</h2>
   <p>If you've got a question or you'd like to work with me <a class="link" href="#">get in touch</a>.</p>
 
 </div>
+
+
 
 {% endblock %}
