update home page

--- a/src/cv.html
+++ b/src/cv.html
@@ -5,6 +5,15 @@
 <div class="wrapper">
   <h1>CV</h1>
   <p class="intro">My career so far.</p>
+  
+  <h2>Jobs</h2>
+  <p>List jobs here.</p>
+  
+  <h2>Education</h2>
+  <p>List education here.</p>
+  
+  <h2>Other stuff</h2>
+  <p>List other stuff here.</p>
 </div>
 
 {% endblock %}
