--- a/src/work.html
+++ b/src/work.html
@@ -4,7 +4,52 @@
 
 <div class="wrapper">
   <h1>Work</h1>
-  <p class="intro">Things I have done.</p>
+  <p class="intro">Things I have worked on.</p>
+
+  <ul class="card-group">
+    <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
+      <h3 class="card__title">
+        <a href="/work">NHS digital service manual</a>
+      </h3>
+      <p class="card__description">Building a design system for the NHS.</p>
+    </li>
+    <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/portfolio_lcc.png" alt="">
+      <h3 class="card__title">
+        <a href="/work">Leeds City Council</a>
+      </h3>
+      <p class="card__description">Redesigning leeds.gov.uk in a user-centerd way.</p>
+    </li>
+    <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/portfolio_lcc_campaigns.png" alt="">
+      <h3 class="card__title">
+        <a href="/work">NHS digital service manual</a>
+      </h3>
+      <p class="card__description">Building a design system for the NHS.</p>
+    </li>
+    <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/portfolio_lcc_campaigns_2.png" alt="">
+      <h3 class="card__title">
+        <a href="/work">Leeds City Council</a>
+      </h3>
+      <p class="card__description">Redesigning leeds.gov.uk in a user-centerd way.</p>
+    </li> 
+    <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
+      <h3 class="card__title">
+        <a href="/work">NHS digital service manual</a>
+      </h3>
+      <p class="card__description">Building a design system for the NHS.</p>
+    </li>
+    <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/portfolio_lcc.png" alt="">
+      <h3 class="card__title">
+        <a href="/work">Leeds City Council</a>
+      </h3>
+      <p class="card__description">Redesigning leeds.gov.uk in a user-centerd way.</p>
+    </li> 
+  </ul>
 </div>
 
 {% endblock %}
