--- a/src/work.html
+++ b/src/work.html
@@ -24,7 +24,7 @@
     <li class="card card--clickable">  
       <img class="card__img" src="/images/work/portfolio_lcc_campaigns.png" alt="">
       <h3 class="card__title">
-        <a href="/work">NHS digital service manual</a>
+        <a href="/work">Leeds City Council campaigns</a>
       </h3>
       <p class="card__description">Building a design system for the NHS.</p>
     </li>
