restyle header and footer, also remove card grid

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     </li> 
   </ul>
 
-  <a class="button" href="/work">My work</a>
+  <p><a class="link-dark-shade" href="/work">See all work</a></p>
 
 </div>
 
