adjust card title margin bottom

--- a/src/work.html
+++ b/src/work.html
@@ -4,7 +4,7 @@
 
 <div class="wrapper">
   <h1>Work</h1>
-  <p class="intro">Some stuff I have worked on.</p>
+  <p class="intro">Things I have worked on.</p>
 
   <ul class="card-group">
     <li class="card card--clickable">  
