--- a/src/cv.html
+++ b/src/cv.html
@@ -7,7 +7,29 @@
   <p class="intro">My career so far.</p>
   
   <h2>Jobs</h2>
-  <p>List jobs here.</p>
+
+  <ul class="list-group">
+    <li class="list-group__item">
+      <p class="text-bold"><a href="#">Defra</a></p>
+      <p>Interaction Designer - <span class="text-muted">Contract</span></p>
+      <p class="text-muted">July 2021 - present</p>
+    </li>
+    <li class="list-group__item">
+      <p class="text-bold"><a href="#">NHS Digital</a></p>
+      <p>Interaction Designer</p>
+      <p class="text-muted">March 2018 - July 2021</p>
+    </li>
+    <li class="list-group__item">
+      <p class="text-bold"><a href="#">Leeds City Council</a></p>
+      <p>Web Designer</p>
+      <p class="text-muted">November 2014 - March 2018</p>
+    </li>
+    <li class="list-group__item">
+      <p class="text-bold"><a href="#">Action Prompt Ltd</a></p>
+      <p>UI Designer</p>
+      <p class="text-muted">February 2009 - November 2014</p>
+    </li>
+  </ul>
   
   <h2>Education</h2>
   <p>List education here.</p>
