--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     </li> 
   </ul>
 
-  <p><a class="link-dark-shade" href="/work">See all work</a></p>
+  <p><a href="/work">See all work</a></p>
 
 </div>
 
