--- a/src/cv.html
+++ b/src/cv.html
@@ -12,30 +12,52 @@
     <li class="list-group__item">
       <p class="text-bold"><a href="#">Defra</a></p>
       <p>Interaction Designer - <span class="text-muted">Contract</span></p>
-      <p class="text-muted">July 2021 - present</p>
+      <p class="text-muted text-small">July 2021 - present</p>
     </li>
     <li class="list-group__item">
       <p class="text-bold"><a href="#">NHS Digital</a></p>
       <p>Interaction Designer</p>
-      <p class="text-muted">March 2018 - July 2021</p>
+      <p class="text-muted text-small">March 2018 - July 2021</p>
     </li>
     <li class="list-group__item">
       <p class="text-bold"><a href="#">Leeds City Council</a></p>
       <p>Web Designer</p>
-      <p class="text-muted">November 2014 - March 2018</p>
+      <p class="text-muted text-small">November 2014 - March 2018</p>
     </li>
     <li class="list-group__item">
       <p class="text-bold"><a href="#">Action Prompt Ltd</a></p>
       <p>UI Designer</p>
-      <p class="text-muted">February 2009 - November 2014</p>
+      <p class="text-muted text-small">February 2009 - November 2014</p>
     </li>
   </ul>
   
   <h2>Education</h2>
-  <p>List education here.</p>
+  <ul class="list-group">
+    <li class="list-group__item">
+      <p class="text-bold">Leeds Metropolitan University</p>
+      <p>Business Information Technology - HND</p>
+      <p class="text-muted text-small">2004 - 2007</p>
+    </li>
+    <li class="list-group__item">
+      <p class="text-bold">Aquinas College, Stockport</p>
+      <p>A Levels in ICT, Business Studies and PE</p>
+      <p class="text-muted text-small">2000 - 2002</p>
+    </li>
+    <li class="list-group__item">
+      <p class="text-bold">St James RC High School, Stockport</p>
+      <p>10 GCSEs A-C</p>
+      <p class="text-muted text-small">1995 - 2000</p>
+    </li>
+  </ul>
   
   <h2>Other stuff</h2>
-  <p>List other stuff here.</p>
+  <ul class="list-group">
+    <li class="list-group__item">
+      <p class="text-bold"><a href="https://www.guidedogs.org.uk/">Volunteer at The Guide Dogs for the Blind Association</a></p>
+      <p>Fosterer (formerly called a Boarder)</p>
+      <p class="text-muted text-small">2012 - 2015</p>
+    </li>
+  </ul>
 </div>
 
 {% endblock %}
