--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <div class="hero--wrapper">
       <h1>Hi, I'm Dave</h1>
       <p class="intro intro--bold">Interaction / UX designer</p>
-      <p class="intro no-margin">I help solve complex problems using design, research and technology to deliver products that meet user and business needs.</p>
+      <p class="intro no-margin">I enjoy solving complex problems using design, research and technology to deliver products that meet user and business needs.</p>
     </div>
   </div>
 </section>
@@ -15,7 +15,8 @@
 {% block mainInner %}
 
 <div class="wrapper">
-  <h2 class="visually-hidden">My work</h2>
+  <h2>Work</h2>
+  <p class="intro">Things I have worked on.</p>
   <ul class="card-group">
     <li class="card card--clickable">  
       <img class="card__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
@@ -33,7 +34,7 @@
     </li> 
   </ul>
 
-  <p><a class="link--arrow" href="/work">See all work</a></p>
+  <p><a class="button" href="/work">See more work</a></p>
 
 </div>
 
