mobile style for nav

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <section class="hero">
   <div class="wrapper">
     <div class="hero--wrapper">
-      <h1>Hi, I'm Dave</h1>
+      <h1 class="hero__header">Hi, I'm Dave</h1>
       <p class="intro intro--bold">Interaction / UX designer</p>
       <p class="intro no-margin">I enjoy solving complex problems using design, research and technology to deliver products that meet user and business needs.</p>
     </div>
@@ -16,7 +16,6 @@
 
 <div class="wrapper">
   <h2>Work</h2>
-  <p class="intro">Things I have worked on.</p>
   <ul class="card-group">
     <li class="card card--clickable">  
       <img class="card__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
