--- a/src/work.html
+++ b/src/work.html
@@ -9,7 +9,7 @@
     <li class="card card--clickable">  
       <img class="card__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
       <h3 class="card__title">
-        <a href="/work">NHS digital service manual</a>
+        <a href="/work/nhs-digital-service-manual">NHS digital service manual</a>
       </h3>
       <p class="card__description">Building a design system for the NHS.</p>
     </li>
