add bng project

--- a/src/work.html
+++ b/src/work.html
@@ -7,33 +7,33 @@
 
   <ul class="card-group">
     <li class="card card--clickable">  
-      <img class="card__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
+      <img class="card__img" src="/images/work/bng.png" alt="">
+      <h3 class="card__title">
+        <a href="/work/bng">Biodiversity Net Gain Register</a>
+      </h3>
+      <p class="card__description">Building a design system for the NHS.</p>
+    </li>
+    <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/nhs_service_manual.png" alt="">
       <h3 class="card__title">
         <a href="/work/nhs-digital-service-manual">NHS digital service manual</a>
       </h3>
       <p class="card__description">Building a design system for the NHS.</p>
     </li>
     <li class="card card--clickable">  
-      <img class="card__img" src="/images/work/portfolio_lcc.png" alt="">
+      <img class="card__img" src="/images/work/nhs_service_manual.png" alt="">
+      <h3 class="card__title">
+        <a href="/work/nhs-digital-service-manual">The NHS website</a>
+      </h3>
+      <p class="card__description">Making nhs.uk accessible.</p>
+    </li>
+    <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/lcc.png" alt="">
       <h3 class="card__title">
         <a href="/work">Leeds City Council</a>
       </h3>
       <p class="card__description">Redesigning leeds.gov.uk in a user-centerd way.</p>
     </li>
-    <li class="card card--clickable">  
-      <img class="card__img" src="/images/work/portfolio_lcc_campaigns.png" alt="">
-      <h3 class="card__title">
-        <a href="/work">Leeds City Council campaigns</a>
-      </h3>
-      <p class="card__description">Building a design system for the NHS.</p>
-    </li>
-    <li class="card card--clickable">  
-      <img class="card__img" src="/images/work/portfolio_lcc_campaigns_2.png" alt="">
-      <h3 class="card__title">
-        <a href="/work">Leeds City Council</a>
-      </h3>
-      <p class="card__description">Redesigning leeds.gov.uk in a user-centerd way.</p>
-    </li> 
   </ul>
 </div>
 
