--- a/src/work/nhs-digital-service-manual.html
+++ b/src/work/nhs-digital-service-manual.html
@@ -7,13 +7,13 @@
   <h1 class="work__header">NHS digital service manual</h1>
   <p class="intro work__description">Building a design system for the NHS.</p>
 
-  <img class="work__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
+  <img class="work__img" src="/images/work/nhs_service_manual.png" alt="">
 
   <h2>The challenge</h2>
 
   <h2>What we did</h2>
 
-  <h2>Results</h2>
+  <h2>Result</h2>
 </div>
 
 {% endblock %}
