--- a/src/work.html
+++ b/src/work.html
@@ -9,9 +9,9 @@
     <li class="card card--clickable">  
       <img class="card__img" src="/images/work/bng.png" alt="">
       <h3 class="card__title">
-        <a href="/work/bng">Biodiversity Net Gain Register</a>
+        <a href="/work/biodiversity-net-gain-register">Biodiversity Net Gain Register</a>
       </h3>
-      <p class="card__description">Building a design system for the NHS.</p>
+      <p class="card__description">Leading interaction design for a successful GDS Alpha service assessment.</p>
     </li>
     <li class="card card--clickable">  
       <img class="card__img" src="/images/work/nhs_service_manual.png" alt="">
@@ -23,16 +23,16 @@
     <li class="card card--clickable">  
       <img class="card__img" src="/images/work/nhs_service_manual.png" alt="">
       <h3 class="card__title">
-        <a href="/work/nhs-digital-service-manual">The NHS website</a>
+        <a href="/work/the-nhs-website">The NHS website</a>
       </h3>
-      <p class="card__description">Making nhs.uk accessible.</p>
+      <p class="card__description">Redesigning the NHS website, making it more accessible.</p>
     </li>
     <li class="card card--clickable">  
       <img class="card__img" src="/images/work/lcc.png" alt="">
       <h3 class="card__title">
-        <a href="/work">Leeds City Council</a>
+        <a href="/work/leeds-city-council-website">Leeds City Council</a>
       </h3>
-      <p class="card__description">Redesigning leeds.gov.uk in a user-centerd way.</p>
+      <p class="card__description">Redesigning leeds.gov.uk based on user needs.</p>
     </li>
   </ul>
 </div>
