--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,19 @@
   <h2>Work</h2>
   <ul class="card-group">
     <li class="card card--clickable">  
+      <img class="card__img" src="/images/work/bng.png" alt="">
+      <h3 class="card__title">
+        <a href="/work/biodiversity-net-gain-register">Biodiversity Net Gain Register</a>
+      </h3>
+      <p class="card__description">Leading interaction design for a successful GDS Alpha service assessment.</p>
+    </li>
+    <li class="card card--clickable">  
       <img class="card__img" src="/images/work/portfolio_nhs_service_manual.png" alt="">
       <h3 class="card__title">
         <a href="/work/nhs-digital-service-manual">NHS digital service manual</a>
       </h3>
       <p class="card__description">Building a design system for the NHS.</p>
     </li>
-    <li class="card card--clickable">  
-      <img class="card__img" src="/images/work/portfolio_lcc.png" alt="">
-      <h3 class="card__title">
-        <a href="/work">Leeds City Council</a>
-      </h3>
-      <p class="card__description">Redesigning leeds.gov.uk in a user-centered way.</p>
-    </li> 
   </ul>
 
   <p><a class="button" href="/work">See more work</a></p>
