--- a/src/work/the-nhs-website.html
+++ b/src/work/the-nhs-website.html
@@ -4,8 +4,8 @@
 
 <div class="wrapper">
 
-  <h1 class="work__header">NHS digital service manual</h1>
-  <p class="intro work__description">Building a design system for the NHS.</p>
+  <h1 class="work__header">The NHS website</h1>
+  <p class="intro work__description">Redesigning the NHS website, making it more accessible.</p>
 
   <img class="work__img" src="/images/work/nhs_service_manual.png" alt="">
 
