--- a/src/writing.html
+++ b/src/writing.html
@@ -4,6 +4,16 @@
 
 <div class="wrapper">
   <h1>Writing</h1>
-  <p class="intro">Some blog posts I have written.</p>
+
+  <ul class="card-group">
+    <li class="card card--clickable">  
+      <img class="card__img" src="https://miro.medium.com/max/1400/1*9lLzw7FgKrEEdGFeKtwZzQ.jpeg" alt="">
+      <h3 class="card__title">
+        <a href="https://medium.com/@dave_hunter_/making-the-nhs-uk-focus-state-accessible-with-help-from-gov-uk-8989cab3ec7d">Making the NHS.UK focus state accessible (with help from GOV.UK)</a>
+      </h3>
+      <p class="card__description">Medium</p>
+    </li>
+  </ul>
+</div>
 
 {% endblock %}
