update project info

--- a/src/work/biodiversity-net-gain-register.html
+++ b/src/work/biodiversity-net-gain-register.html
@@ -50,7 +50,7 @@
   
   <figure class="fig">
     <img class="fig__img" src="/images/work/bng/bng-prototype.png" alt="">
-    <figcaption class="fig__caption">A design decisions log we kept in the team's Confluence space.</figcaption>
+    <figcaption class="fig__caption">Screenshots of a HTML prototype I built for capturing a land boundary.</figcaption>
   </figure>
 
   <p>I kept track of all our design hypotheses and research findings in a design decisions log. This proved extremely useful when preparing for our GDS assessment.</p>
