--- a/src/work/the-nhs-website.html
+++ b/src/work/the-nhs-website.html
@@ -9,7 +9,8 @@
 
   <img class="work__img" src="/images/work/nhs_service_manual.png" alt="">
 
-  <p>Get in touch for more details.</p>
+  <p>I'm currently writing the content for this project.</p>
+  <p>Get in touch with me if you want to find out more.</p>
   
 </div>
 
