--- a/src/contact.html
+++ b/src/contact.html
@@ -5,6 +5,7 @@
 <div class="wrapper">
   <h1>Contact</h1>
   <p class="intro">If you'd like to hire me for a contract, or discuss a collaboration—let's talk.</p>
+  <p>Email: <a href="mailto:hunter_08@hotmail.co.uk?subject=Hello dave hunter design!">hunter_08@hotmail.co.uk</a></p>
 </div>
 
 {% endblock %}
