--- a/src/work.html
+++ b/src/work.html
@@ -35,6 +35,9 @@
       <p class="card__description">Redesigning leeds.gov.uk based on user needs.</p>
     </li>
   </ul>
+
+  <p><a class="button" href="/images/work/David Hunter - Interaction Designer - CV June 2022.pdf">Download my CV (PDF, 78 KB)</a></p>
+
 </div>
 
 {% endblock %}
