--- a/src/about-me.html
+++ b/src/about-me.html
@@ -6,19 +6,21 @@
   <h1>About me</h1>
   <p class="intro">I'm an interaction / ux designer, who lives in Menston, West Yorkshire.</p>
 
+  <div class="img-group work__img">
   <figure class="fig">
     <img class="fig__img" src="/images/about/about-family.png" alt="">
     <figcaption class="fig__caption">Me, my son and my dog posing on top of Ilkley Moor.</figcaption>
   </figure>
+  <figure class="fig">
+    <img class="fig__img" src="/images/about/about-family-dog.png" alt="">
+    <figcaption class="fig__caption">Family walk.</figcaption>
+  </figure>
+  </div>
 
   <p>When I'm not working, I spend most days walking my dog, building Lego with my children, silly dancing with my daughter, coaching my son's football team or relaxing with my wife and cats.</p>
 
   <p>You can follow <a href="https://www.instagram.com/custardlabrador/">my dog Custard on Instagram</a>.</p>
 
-  <figure class="fig">
-    <img class="fig__img" src="/images/about/custard-marmite.jpeg" alt="">
-    <figcaption class="fig__caption">My dog Custard chuffed to bits at getting to finish a jar of Marmite.</figcaption>
-  </figure>
 
 </div>
 
