--- a/src/about-me.html
+++ b/src/about-me.html
@@ -17,7 +17,7 @@
   </figure>
   </div>
 
-  <p>When I'm not working, I spend most days walking my dog, building Lego with my children, silly dancing with my daughter, coaching my son's football team or relaxing with my wife and cats.</p>
+  <p>When I'm not working, I spend my days walking my dog, building Lego with my children, silly dancing with my daughter, coaching my son's football team or relaxing with my wife and cats.</p>
 
   <p>You can follow <a href="https://www.instagram.com/custardlabrador/">my dog Custard on Instagram</a>.</p>
 
